# tydati

./: pyproject.toml  readme.md
src/tydati/: adatetime.py
