[tool.poetry]
name = "tydati"
version = "0.1.0"
description = "Strictly timezone aware and naive datetime classes"
authors = ["ExOriente"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
